<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_app_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login1"
    android:clickable="true"
    tools:context=".Login_Activity"
    android:focusable="true">


    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="331dp"
        android:contentDescription="@string/login_Logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopdrop"
        tools:ignore="DuplicateIds" />


    <TextView
        android:id="@+id/forget_password_Link"
        android:layout_width="184dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="229dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="144dp"
        android:background="#8D7986CB"
        android:text="@string/forget_password"
        android:textColor="#350588"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/number_input"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="257dp"
        android:autofillHints=""
        android:background="#A8B3E2F8"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#0843BA"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="188dp"
        android:background="#A8B3E2F8"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="231dp"
        android:layout_marginBottom="140dp"
        android:background="#8D7986CB"
        android:text="@string/checkBox"
        android:textColor="#350588"
        android:textSize="18sp" />


</RelativeLayout>