<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/join_now_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Msg1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="serif"
        android:text="@string/Msg1"
        android:textAlignment="center"
        android:textColor="#0C0000"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="356dp"
        android:layout_height="149dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="503dp"
        android:contentDescription="@string/Logo_desc"
        android:src="@drawable/shopdrop" />

    <Button
        android:id="@+id/join_now"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/custom_button"
        android:cursorVisible="true"
        android:text="@string/join_now_btn"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/custom_button"
        android:text="@string/Login_btn"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


</RelativeLayout>